--- a/web/src/index.css
+++ b/web/src/index.css
@@ -1,13 +1,82 @@
 /**
+ * START --- SETUP TAILWINDCSS EDIT
+ *
+ * `yarn rw setup ui tailwindcss` placed these directives here
+ * to inject Tailwind's styles into your CSS.
+ * For more information, see: https://tailwindcss.com/docs/installation
+ */
+ @import "tailwindcss/base";
+ @import "tailwindcss/components";
+ @import "tailwindcss/utilities";
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+/**
+ * END --- SETUP TAILWINDCSS EDIT
+ */
+/**
  * START --- TAILWIND GENERATOR EDIT
  *
  * `yarn rw setup tailwind` placed these imports here
  * to inject Tailwind's styles into your CSS.
  * For more information, see: https://tailwindcss.com/docs/installation#add-tailwind-to-your-css
  */
- @import "tailwindcss/base";
- @import "tailwindcss/components";
- @import "tailwindcss/utilities";
  /**
   * END --- TAILWIND GENERATOR EDIT
   */
+
+  .post-table {
+    @apply   table-auto;
+  }
+  .post-table td{
+   @apply break-words;
+  }
+  .post-table th,
+  .post-table tr {
+    @apply p-2;
+  }
+  .post-table tbody th {
+    @apply text-right;
+  }
+  .post-table tbody tr {
+    @apply border-t-2 bg-gray-50;
+  }
+  .post-table tbody tr:nth-child(even)  {
+    @apply  bg-white;
+  }
+h1{ @apply text-2xl;}
+h2 { @apply text-xl;}
+h3 {@apply text-lg;}
+blockquote{
+  @apply bg-blue-gray-50 border-l-8 border-solid border-gray-300 mx-6 my-2 pl-4 py-3 pr-1;
+  quotes: "\201C""\201D""\2018""\2019";
+}
+ol{ @apply list-decimal;}
+ul{@apply list-disc;}
+a{@apply underline text-blue-500;}
+nav ul { @apply list-none;}
+nav ul li a { @apply no-underline;}
+.button-primary {
+  @apply border border-indigo-500 bg-indigo-500 text-white rounded-md px-4 py-2 m-2 transition duration-500 ease-in-out select-none hover:bg-indigo-600 focus:outline-none;
+}
+.button-success {
+  @apply border border-green-500 bg-green-500 text-white rounded-md px-4 py-2 m-2 transition duration-500 ease-in-out select-none hover:bg-green-600 focus:outline-none;
+}
+.button-error {
+  @apply border border-red-500 bg-red-500 text-white rounded-md px-4 py-2 m-2 transition duration-500 ease-in-out select-none hover:bg-red-600 focus:outline-none;
+}
+.button-warning {
+  @apply border border-yellow-500 bg-yellow-500 text-white rounded-md px-4 py-2 m-2 transition duration-500 ease-in-out select-none hover:bg-yellow-600 focus:outline-none;
+}
+.button-info {
+  @apply border border-teal-500 bg-teal-500 text-white rounded-md px-4 py-2 m-2 transition duration-500 ease-in-out select-none hover:bg-teal-600 focus:outline-none;
+}
+.button-light {
+  @apply border border-gray-200 bg-gray-200 text-gray-700 rounded-md px-4 py-2 m-2 transition duration-500 ease-in-out select-none hover:bg-gray-300 focus:outline-none;
+}
+.button-dark {
+  @apply border border-gray-700 bg-gray-700 text-white rounded-md px-4 py-2 m-2 transition duration-500 ease-in-out select-none hover:bg-gray-800 focus:outline-none;
+}
+
+
+
